[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.4"
polars = { version = "0.37.0", features = ["lazy", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
